--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,12 @@
     "psr-0": {"": "src/"}
   },
   "require": {
-    "php": ">=5.5",
-    "cheprasov/php-redis-client" : "~1.4"
+    "php": ">=5.5"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.*",
-    "cheprasov/php-parallel": "~1.0"
+    "cheprasov/php-parallel": "~1.0",
+    "cheprasov/php-redis-client" : "~1.4",
+    "predis/predis": "^1.1"
   }
 }
