--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-  "name": "cheprasov/php-redis-lock",
+  "name": "kl/php-redis-lock",
   "version": "1.0.0",
   "description": "RedisLock for PHP is a synchronization mechanism for enforcing limits on access to a resource in an environment where there are many threads of execution. A lock is designed to enforce a mutual exclusion concurrency control policy.",
-  "homepage": "http://github.com/cheprasov/php-redis-lock",
+  "homepage": "http://github.com/kongxinchi/php-redis-lock",
   "minimum-stability": "stable",
   "license": "MIT",
   "authors": [
     {
-      "name": "Alexander Cheprasov",
-      "email": "cheprasov.84@ya.ru"
+      "name": "KL",
+      "email": "kxc2010@gmail.com"
     }
   ],
   "autoload": {
